--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipies</h1>
     <a href="recipies/chocolate_cake.html">Chocolate Cake Recipie</a>
     <a href="recipies/lasagna.html">Lasagna Recipie</a>
+    <a href="recipies/chocolate_chip_cookies.html">Chocolate Chip Cookies Recipies</a>
 </body>
 </html>
