wrapped anchor links in index.html in a ul element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="recipies/chocolate_cake.html">Chocolate Cake Recipie</a>
-    <a href="recipies/lasagna.html">Lasagna Recipie</a>
-    <a href="recipies/chocolate_chip_cookies.html">Chocolate Chip Cookies Recipies</a>
+    <ul>
+        <li><a href="recipies/chocolate_cake.html">Chocolate Cake Recipie</a></li>
+        <li><a href="recipies/lasagna.html">Lasagna Recipie</a></li>
+        <li><a href="recipies/chocolate_chip_cookies.html">Chocolate Chip Cookies Recipies</a></li>
+    </ul>
 </body>
 </html>
